# sp-exam-project

./: .gitignore  CMakeLists.txt  draw_graph.py  graph.dot  graphs.xlsx  listing.tex  main.cpp  vessels.h
include/: thread-pool.hpp
